monitoring/dev-ingress-grafana-monitoring-alb-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:744541586589:certificate/868a5b27-324d-4409-a770-2f1bddf3a2d8,arn:aws:acm:ap-southeast-1:744541586589:certificate/b3f0f063-4263-46ea-b343-417efda42242
    alb.ingress.kubernetes.io/group.name: grafana-monitoring-alb-in
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-name: grafana-monitoring-alb-in
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: grafana-monitoring-alb-in
  namespace: monitor
spec:
  rules:
  - host: grafana.dev.marblexkorea.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: prometheus.dev.marblexkorea.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
        path: /*
        pathType: ImplementationSpecific
